--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="text-center text-light my-4">
             <h1 class="mb-4">To do List</h1>
             <form class="search">
-                <input type="text" class="form-control m-auto" name="search" placeholder="search todos">
+                <input type="text" class="form-control m-auto" name="search" placeholder="search list">
             </form>
         </header>
 
